Fixed video link and Thesis Exhibit spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -151,7 +151,7 @@ header{
 	display:flex;
 	flex-direction:column;
 	align-items:center;
-	margin-bottom:4rem;
+	margin-bottom:2rem;
 }
 #featured-courses h3{
 
@@ -171,6 +171,7 @@ header{
 	font-weight:bold;
 	text-align:center;
 	padding:3rem auto 1rem auto;
+	margin-bottom:2rem;
 }
 
 #thesis-main h3,
